--- a/mblock/html/admin_consult.html
+++ b/mblock/html/admin_consult.html
@@ -31,6 +31,7 @@
                         <li><div class="list"onclick="location.href='admin_invest.html'">투자종목 관리</div></li>
                         <li><div class="list"onclick="location.href='admin_partner.html'">협력사 관리</div></li>
                         <li><div class="list" onclick="location.href='admin_consult.html'">개인 문의</div></li>
+                        <li><div class="list" onclick="location.href='admin_member.html'">멤버 관리</div></li>
                         <li><div class="list" onclick="location.href='admin_chat.html'">단체 채팅</div></li>
                     </ul>
                 </div>
