--- a/mblock/html/admin_member_detail.html
+++ b/mblock/html/admin_member_detail.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../css/admin_announce_add.css">
+    <link rel="stylesheet" href="../css/admin_member_detail.css">
 </head>
 <body>
     <!-- header -->
@@ -18,6 +18,7 @@
             </h1>
         </div>
     </header>
+    <!-- main -->
     <main>
         <div class="container">
             <div class="top">
@@ -36,31 +37,48 @@
                     </ul>
                 </div>
                 <div class="right">
-                    <div class="title"><h2>공지사항 작성</h2></div>
-                    <form action="#">
-                        <div class="form-group">
-                            <label>메인 이미지</label>
+                    <div class="title"><h2>멤버 프로필</h2></div>
+                    <div class="profile">
+                        <div class="info">
+                            <form action="#">
+                                <div class="form-group">
+                                    <label for="name">이름</label>
+                                    <input type="text" id="name">
+                                </div>
+                                <div class="form-group">
+                                    <label for="id">아이디</label>
+                                    <input type="text" id="id">
+                                </div>
+                                <div class="form-group">
+                                    <label for="position">직책</label>
+                                    <input type="text" id="position">
+                                </div>
+                                <div class="form-group">
+                                    <label for="phone">휴대폰 번호</label>
+                                    <input type="tel" id="phone">
+                                </div>
+                            </form>
+                        </div>
+                        <div class="img">
                             <input id="selectImg" type="file" hidden>
-                            <div class="main-img" onclick="defaultBtnActive()">
-                                <img src="" alt="" >
-                                <i class="fa-solid fa-cloud-arrow-up"></i>
-                                select your image
+                            <img src="../images/profile1.jpg" alt="프로필 이미지">
+                            <button onclick="defaultBtnActive()"><i class="fa-solid fa-user-pen"></i> 사진 변경</button>
+                        </div>
+                    </div>
+                    <div class="edit">
+                        <h3>프로필 수정</h3>
+                        <div class="edit-form">
+                            <div class="form-group">
+                                <label for="password">현재 비밀번호</label>
+                                <input type="password" id="password">
                             </div>
+                            <button>수정하기</button>
                         </div>
-                        <div class="form-group">
-                            <label for="title">제목</label>
-                            <input type="text" id="title">
-                        </div>
-                        <div class="form-group">
-                            <label for="content">내용</label>
-                            <textarea id="content"></textarea>
-                        </div>
-                        <button>게시하기</button>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
     </main>
-    <script src="../add_image.js"></script>
+    <script src="../edit_image.js"></script>
 </body>
 </html>
