--- a/mblock/html/admin_member.html
+++ b/mblock/html/admin_member.html
@@ -53,32 +53,32 @@
                                 <div class="info">멤버 아이디</div>
                                 <div class="info">Coin master</div>
                                 <div class="info">010-0000-0000</div>
-                                <div class="control"><i class="fa-solid fa-check" style="color: #11998e;"></i></div>
-                                <div class="control" id="delete"><i class="fa-solid fa-trash-can"></i></div>
+                                <div class="control-accept"><i class="fa-solid fa-check" style="color: #11998e;"></i></div>
+                                <div class="control-delete" id="delete"><i class="fa-solid fa-trash-can"></i></div>
                             </li>
                             <li>
                                 <div class="info-name">멤버 이름</div>
                                 <div class="info">멤버 아이디</div>
                                 <div class="info">Coin master</div>
                                 <div class="info">010-0000-0000</div>
-                                <div class="control"><i class="fa-solid fa-check" style="color: #11998e;"></i></div>
-                                <div class="control" id="delete"><i class="fa-solid fa-trash-can"></i></div>
+                                <div class="control-accept"><i class="fa-solid fa-check" style="color: #11998e;"></i></div>
+                                <div class="control-delete" id="delete"><i class="fa-solid fa-trash-can"></i></div>
                             </li>
                             <li>
                                 <div class="info-name">멤버 이름</div>
                                 <div class="info">멤버 아이디</div>
                                 <div class="info">Coin master</div>
                                 <div class="info">010-0000-0000</div>
-                                <div class="control"><i class="fa-solid fa-check" style="color: #11998e;"></i></div>
-                                <div class="control" id="delete"><i class="fa-solid fa-trash-can"></i></div>
+                                <div class="control-accept"><i class="fa-solid fa-check" style="color: #11998e;"></i></div>
+                                <div class="control-delete" id="delete"><i class="fa-solid fa-trash-can"></i></div>
                             </li>
                             <li>
                                 <div class="info-name">멤버 이름</div>
                                 <div class="info">멤버 아이디</div>
                                 <div class="info">Coin master</div>
                                 <div class="info">010-0000-0000</div>
-                                <div class="control">승인하기</div>
-                                <div class="control" id="delete"><i class="fa-solid fa-trash-can"></i></div>
+                                <div class="control-accept">승인하기</div>
+                                <div class="control-delete" id="delete"><i class="fa-solid fa-trash-can"></i></div>
                             </li>
                         </ul>
                     </div>
@@ -90,10 +90,18 @@
                             <div class="delete">삭제하기</div>
                         </div>
                     </div>
+                    <div class="modal-accept">
+                        <div class="modal-content">
+                            <i class="fa-solid fa-xmark"></i>
+                            <strong>승인하시겠습니까?</strong>
+                            <p>선택 멤버를 승인합니다</p>
+                            <div class="accept">승인하기</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </main>
-    <script src="../modal.js"></script>
+    <script src="../modal_member.js"></script>
 </body>
 </html>
