--- a/mblock/html/admin_member.html
+++ b/mblock/html/admin_member.html
@@ -87,7 +87,7 @@
                             <i class="fa-solid fa-xmark"></i>
                             <strong>삭제하시겠습니까?</strong>
                             <p>삭제 후 복구가 불가합니다</p>
-                            <div class="delete">삭제하기</div>
+                            <button>삭제하기</button>
                         </div>
                     </div>
                     <div class="modal-accept">
@@ -95,7 +95,7 @@
                             <i class="fa-solid fa-xmark"></i>
                             <strong>승인하시겠습니까?</strong>
                             <p>선택 멤버를 승인합니다</p>
-                            <div class="accept">승인하기</div>
+                            <button>승인하기</button>
                         </div>
                     </div>
                 </div>
