--- a/mblock/html/admin_member_detail.html
+++ b/mblock/html/admin_member_detail.html
@@ -43,11 +43,11 @@
                             <form action="#">
                                 <div class="form-group">
                                     <label for="name">이름</label>
-                                    <input type="text" id="name">
+                                    <p>멤버 이름</p>
                                 </div>
                                 <div class="form-group">
                                     <label for="id">아이디</label>
-                                    <input type="text" id="id">
+                                    <p>멤버 아이디</p>
                                 </div>
                                 <div class="form-group">
                                     <label for="position">직책</label>
@@ -66,14 +66,22 @@
                         </div>
                     </div>
                     <div class="edit">
-                        <h3>프로필 수정</h3>
-                        <div class="edit-form">
-                            <div class="form-group">
-                                <label for="password">현재 비밀번호</label>
-                                <input type="password" id="password">
+                        <h3>멤버 관리</h3>
+                            <div class="select-menu">
+                                <div class="select-btn">
+                                    <span class="sBtn-text">승인 대기중</span>
+                                    <i class="fa-solid fa-angle-down"></i>
+                                </div>
+                                <ul class="options">
+                                    <li class="option"><span class="option-text">승인 대기중</span></li>
+                                    <li class="option"><span class="option-text">승인</span></li>
+                                </ul>
+                            </div>
+                            <div class="withdraw">
+                                회원정보 삭제
                             </div>
                             <button>수정하기</button>
-                        </div>
+
                     </div>
                 </div>
             </div>
